# obview

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .replit  CONFIGURATION.md  DEPLOYMENT.md  DOCKER_FILE_MANAGEMENT.md  DOCKER_REGISTRATION_DISABLE.md  DOCKER_THEME_PERSISTENCE.md  DOCKER_TROUBLESHOOTING.md  DOCKER_UPDATES.md  Dockerfile  Dockerfile.debug  Dockerfile.new  LARGE_FILE_UPLOAD_FIX.md  NGINX_CONFIG.md  README.md  THEME_PREFERENCE_UPDATES.md  backup.sh  build-frontend.sh  check-database.js  cleanup.sh  config.py  cookies.txt  create-package-complete.sh  create-package-fixed.sh  create-package.sh  database-schema.sql  docker-compose.yml  docker-deploy.sh  healthcheck.js  install-fixed.sh  install.sh  nginx-obview  nginx.conf  obview-permanent-fix.sh  obview.service  package-lock.json  package.json  (+13 more)
app/: __init__.py
attached_assets/: Pasted--Container-obview-db-Running--1746117127208.txt  Pasted--Error-creating-public-comment-Error-Parent-comment-does-not-exist-obview-app-at-DatabaseSt-1758818810819_1758818810819.txt  Pasted--Running-3-3-Network-obview-network-Created-0-1745958079049.txt  Pasted--Running-5-5-Container-obview-app-Removed--1746119448265.txt  Pasted--Running-5-5-Network-obview-app-network-Created--1746090015820.txt  Pasted--Running-5-5-Network-obview-network-Created-0-1745957216561.txt  Pasted--Running-5-5-Network-obview-network-Created-0-1745959375823.txt  Pasted--User-is-authenticated-proceeding-obview-app-COMMENT-API-GET-api-files-33-comments-request-1758826873403_1758826873403.txt  (+55 more)
client/: index.html
scripts/: backup-db.sh  (+18 more)
(+148 files in other folders)
